--- a/doc/oracle/doc_oracle.adoc
+++ b/doc/oracle/doc_oracle.adoc
@@ -1,4 +1,5 @@
-Enterprise IT Digital twin
+= Enterprise IT Digital twin
+
 BAYRAMOV Matin
 bayramov.matin-ext@power.alstom.com
 v1.0, 2016-10-10
@@ -9,96 +10,104 @@ v1.0, 2016-10-10
 == Project
 The main purpose of this project is ....
 
-image::images/dl_oracle_global.jpg[caption="Figure 1: ", title="Global view of the process", width="800", height="340"]
+image::images/dl_oracle_global.jpg[caption="Figure 1: ", title="Global view of the processes", width="800", height="340"]
 
-== Collection of DB access log files
-As Alstom, we ask to CSC to provide us Oracle DB log files.
-They give us archived log files recorded by different listeners.
+== DB access log files
+Our goal is to analyse accesses to the specific servers or server instances.
+This is why we ask to CSC to provide us Oracle DB log files by giving them list of server names, instance names in CSV format.
+This is a link to one of these files which are available under s3 server.
 
+[small]#s3://gecustomers/document/GPI/oracle_log/Datalab_master_file_Oracle_Log_Request_with_SID_20160907_V2.6.csv#
 
-There is a zip file per server and its instances.
+The provided log files (which are recorded by different listeners) are stored under NAS3 server. (sfpld19901.ad.sys)
+
+Log file of each server instances named with its server name and instance name.
+Here are some examples of log files provided. Ex: listener1_sabad19305_IM1.zip, listener_acch15624_MW2.zip.
+
 These log files give us many information about the source of Data Base requests, the kind of source devices such as
 physical user machine, proxy server, etc.
 
-There are many variety on the location of the servers and on their timezones.
 
-
-The convention used to name these files is name of the server and instances to which they belong.
-As an example, the following archive file contains line of logs recorded from "Server ServerName and Instance 2":
-
-[TIP]
-LISTENER_ServerName_Instance1_logs.zip,
-ex: listener1_sabad19305_IM1.zip, listener_acch15624_MW2.zip
-
-
-== Provided access logs organization
+== Project general file organization
 We organised files by respecting to the following folder structure.
 
 * "in" folder is mainly used to keep source files.
 * "out" folder is used to save output data
 * "done" folder is intended to save data once all processes are finished.
 
-Once archived files put on the server for the first time, we move them inside "/in" folder.
-At the end of the script all data files are stored in NAS3 server.
+This convention is respected on all over the project.
+
+
+image::images/dl_oracle_sarma.jpg[caption="Figure 2: ", title="Processus on the SARMA10012 server", width="650", height="300"]
 
 
 == Transferring files from remote server
-Second phase of the process is done on the collector server.
-Archived log files are securely transferred from NAS3 server to the local server.
+In order to process log files we need to copy them to SARMA10012 server.
 
-This is done by get_from_remote() function.
-It is in main.sh script file which is under _collect/oracle/bin/_ folder
+The function _get_from_remote()_ in _collect/oracle/bin/main.sh_ file is written for this purpose.
+Archived .zip files are securely transferred from NAS3 server to the local collector server.
 
 .collect/oracle/bin/main.sh
-[source, shell, numbered]
+[source, python, numbered]
 function get_from_remote() {
 	#move remote files to local
-	for fic in $(ssh $REMOTE_ORACLE_LOG_USER@$REMOTE_ORACLE_LOG_SERVER "cd $REMOTE_ORACLE_LOG_DIR_IN; ls *.zip 2>/dev/null")
+	for fic in $(ssh user@server "cd log_dir_in; ls *.zip 2>/dev/null")
 	do
 		echo "fic : $fic"
-		scp -p $REMOTE_ORACLE_LOG_USER@$REMOTE_ORACLE_LOG_SERVER:$REMOTE_ORACLE_LOG_DIR_IN/$fic $LOCAL_ORACLE_LOG_DIR_IN &&\
-		ssh $REMOTE_ORACLE_LOG_USER@$REMOTE_ORACLE_LOG_SERVER "mv $REMOTE_ORACLE_LOG_DIR_IN/$fic $REMOTE_ORACLE_LOG_DIR_DONE/$fic"
+		scp -p user@server:log_dir_in/$fic log_dir_in &&\
+		ssh user@server "mv log_dir_in/$fic log_dir_done/$fic"
 	done
 }
 
 Then, these archived (.zip) log files are parsed via pars_in() method.
 
 
-image::images/dl_oracle_sarma.jpg[caption="Figure 1: ", title="Global view of the process", width="800", height="340"]
 
 
-== Encode files in CSV format
-User datalab:
+== Encode log files in CSV format
 
-Log files information is parsed by bash script and encoded in CSV format.
-It is done by the help of the pars_in() function.
-Then we put them on S3 server.
+As it is known, log files are not in columnar format.
+Therefore, we need to transform them into columnar format, like CSV.
 
-(User nexthink:)
+This process is done inside of the _pars_in()_ function in _collect/oracle/bin/main.sh_ file.
+Lines are read one by one and stored inside of a .csv.gz file.
+And these archive files are sent to S3 server.
+
+TODO : user datalab:
+
+
+
+== Anonymization
+
+Log files contain user access information and host name of the source devices.
+In order to preserve anonymity we need to anonymize these information before storing them in S3 server.
+This process is done in VM ubuntu with IP 192.167.17.20.
+Fields source.user and source.host.name anonymized into I_ID_U and I_ID_D.
+
+Results are exported in .csv.gz format and sent to the S3 server under s3://gerepo/in/oracle repository.
+
+TODO : (User nexthink:)
 
 A single Virtual Machine is dedicated to anonymize the received data.
 Any user information, device IDs, machine IPs are anonymized.
+
+
+== Virtual Machine - 192.167.17.20
+
+TODO : VM20
 
 Access to the virtual machine which realise this operation is permitted by ssh connection.
 {ssh datalab@192.167.17.20}
 
 
-== Anonymization
-Log files contain user access information and host name of the source devices.
-In order to preserve anonymity of the information we need to anonymize them before storing them in S3 server.
-This process is done in VM ubuntu with IP 192.167.17.20.
-Fields source.user and source.host.name anonymized to I_ID_U and I_ID_D.
+== Data manipulation - Oracle pipeline
 
-Results are exported in .csv.gz format and sent to the S3 server under s3://gerepo/in/oracle repository.
+We use a zeppelin notebook to analyse prepared data.
+URL to the zeppelin notebook */in/40 - Oracle pipeline* is https://devzeppelin.gadatalab.com/#/notebook/2BWM6SWE5
 
+This notebook contains multiple paragraphs and each of them dedicated to a specific action.
 
-
-== Virtual Machine - 192.167.17.20
-
-TODO VM20
-
-
-== Data manipulation
+We take logs which are stored in CSV format
 A Zeppelin notebook with the name "40 - Oracle pipeline" is used to analyse these data.
 The main action taken in this part is to encode CSV format files into "parquet" columnar format and restore
 them under s3://gerepo/out/oracle.
@@ -141,9 +150,15 @@ And then we need to either correct them or exclude from the analysis.
 
 
 
+== TODO : URL vers les notebook URL de navigator.
+
+== TODO : How to access to s3 server. (URL, secret key, cyberduck)
+
+== TODO : Zeppelin (why zeppelin ? what we do in zeppelin ? how to access to zeppelin ?)
 
 
 
-
-
+[TIP]
+LISTENER_ServerName_Instance1_logs.zip,
+ex: listener1_sabad19305_IM1.zip, listener_acch15624_MW2.zip
 
