--- a/doc/oracle/doc_oracle.adoc
+++ b/doc/oracle/doc_oracle.adoc
@@ -1,16 +1,21 @@
 = Enterprise IT Digital twin
-
-BAYRAMOV Matin
+Guillaume PINOT, Matin BAYRAMOV
 bayramov.matin-ext@power.alstom.com
 v1.0, 2016-10-10
+
 :pdf-page-size: A4
-:imagesdir: images
+:imagesdir: .
 :icons: font
+:sourcedir: ../../collect/oracle/bin
+
+
+
 
 == Project
 The main purpose of this project is ....
 
-image::images/dl_oracle_global.jpg[caption="Figure 1: ", title="Global view of the processes", width="800", height="340"]
+image::{imagesdir}/images/dl_oracle_global.jpg[caption="Figure 1: ", title="Global view of the processes", width="800", height="340"]
+
 
 == DB access log files
 Our goal is to analyse accesses to the specific servers or server instances.
@@ -38,46 +43,40 @@ We organised files by respecting to the following folder structure.
 This convention is respected on all over the project.
 
 
-image::images/dl_oracle_sarma.jpg[caption="Figure 2: ", title="Processus on the SARMA10012 server", width="650", height="300"]
+image::{imagesdir}/images/dl_oracle_sarma.jpg[caption="Figure 2: ", title="Processus on the SARMA10012 server", width="650", height="300"]
 
+== Server SARMA10012
 
-== Transferring files from remote server
+=== Transferring files from remote server
 In order to process log files we need to copy them to SARMA10012 server.
 
 The function _get_from_remote()_ in _collect/oracle/bin/main.sh_ file is written for this purpose.
 Archived .zip files are securely transferred from NAS3 server to the local collector server.
 
 .collect/oracle/bin/main.sh
-[source, python, numbered]
-function get_from_remote() {
-	#move remote files to local
-	for fic in $(ssh user@server "cd log_dir_in; ls *.zip 2>/dev/null")
-	do
-		echo "fic : $fic"
-		scp -p user@server:log_dir_in/$fic log_dir_in &&\
-		ssh user@server "mv log_dir_in/$fic log_dir_done/$fic"
-	done
-}
+[source,bash,numbered]
+[%autofit]
+----
+include::{sourcedir}/main.sh[lines=9..17]
+----
 
-Then, these archived (.zip) log files are parsed via pars_in() method.
+Later, these archived (.zip) log files will be parsed via parse_in() method.
 
 
 
-
-== Encode log files in CSV format
+=== Encode log files in CSV format
 
 As it is known, log files are not in columnar format.
 Therefore, we need to transform them into columnar format, like CSV.
 
-This process is done inside of the _pars_in()_ function in _collect/oracle/bin/main.sh_ file.
+This process is done inside of the _parse_in()_ function in _collect/oracle/bin/main.sh_ file.
 Lines are read one by one and stored inside of a .csv.gz file.
 And these archive files are sent to S3 server.
 
 TODO : user datalab:
 
 
-
-== Anonymization
+=== Anonymization
 
 Log files contain user access information and host name of the source devices.
 In order to preserve anonymity we need to anonymize these information before storing them in S3 server.
@@ -92,12 +91,15 @@ A single Virtual Machine is dedicated to anonymize the received data.
 Any user information, device IDs, machine IPs are anonymized.
 
 
-== Virtual Machine - 192.167.17.20
+=== Virtual Machine - 192.167.17.20
 
 TODO : VM20
 
 Access to the virtual machine which realise this operation is permitted by ssh connection.
 {ssh datalab@192.167.17.20}
+
+We have implemented _start_vm()_ and _poweroff_vm()_ functions in _vbox_vm.sh_ script to start and stop the VM.
+Any information about this VM is in _vbox_vm.csv_ file.
 
 
 == Data manipulation - Oracle pipeline
@@ -107,11 +109,8 @@ URL to the zeppelin notebook */in/40 - Oracle pipeline* is https://devzeppelin.g
 
 This notebook contains multiple paragraphs and each of them dedicated to a specific action.
 
-We take logs which are stored in CSV format
-A Zeppelin notebook with the name "40 - Oracle pipeline" is used to analyse these data.
-The main action taken in this part is to encode CSV format files into "parquet" columnar format and restore
-them under s3://gerepo/out/oracle.
-The goal is to run various actions, such as search, filter, join, etc. more rapidly.
+We parse log files which are stored in CSV format in s3://gerepo/in/oracle and encode them in _parquet_ columnar format to s3://gerepo/out/oracle.
+The goal is to run various actions, such as search, filter, join, etc. much more rapidly than it is possible in CSV format.
 
 
 == Date time format correction
@@ -129,14 +128,11 @@ As an example, it is important now to find out the source mdm-itc "site" of the 
 However, some site, sector and teranga information is not always correctly reached as
 the requests are not only done from physical users machines but also from servers.
 
+We also defined a resolve function to find a site name from an IP address.
+
+
 Finally, results are written to HDFS file system under hdfs://data/temp/oa_oracle_join
 
-
-.source code ex: Parse file list to process
-[source,scala]
-----
-case class op_oracle_ca(dir: String, file: String, server: String)
-----
 
 
 == Date time interval precision
@@ -149,16 +145,10 @@ And then we need to either correct them or exclude from the analysis.
 
 
 
-
-== TODO : URL vers les notebook URL de navigator.
-
-== TODO : How to access to s3 server. (URL, secret key, cyberduck)
-
-== TODO : Zeppelin (why zeppelin ? what we do in zeppelin ? how to access to zeppelin ?)
+== TODO
+* URLs to zeppelin notebooks, paragraphs
+* How to access to s3 server. (URL, secret key, cyberduck)
+* Zeppelin (why zeppelin ? what we do in zeppelin ? how to access to zeppelin ?)
 
 
-
-[TIP]
-LISTENER_ServerName_Instance1_logs.zip,
-ex: listener1_sabad19305_IM1.zip, listener_acch15624_MW2.zip
 
