--- a/doc/doc_nexthink.adoc
+++ b/doc/doc_nexthink.adoc
@@ -47,77 +47,71 @@ image::images/nexthink_collector_engins.jpg[title="Nexthink Engines which collec
 == Data transfer from backup servers
 
 Collector server (SARMA10012) collects backup data from Nexthink Collector servers every 3 days.
-Each backup data can contain log history of 5-20 days.
+Each backup data can contain log history from 5 to 20 days.
 
 
-If there are more data in the backup servers, the old once are purged. 
-This is why we need to be sure to take more data possible and not to loose a part of them, 
-we copy them every 3 days to SAN server. 
-As a result, we will have overlaps.
-We will discuss about this problem in the Pipeline part. 
-
-There are 2 virtual machines on the collector server which are dedicated to extract information from "BackupData".
-One of them is VM5 with version 5 of Nexthink and it is used extract data from backup data. 
-Another one is VM6 with version 6 of Nexthink and this one is used to extract backup data coming from 21 Nexthink servers. 
-
-Pure data collected are saved under /0 folder on SAN server as they are.
-Every day, the action _extractbackup_ is executed.
-In other terms, the backup data saved under /0 folder is dispatched either on VM5 or on VM6 to be extracted. 
+Not all archived data is kept for a life.
+The very old data are erased by the new once.
+This is why we copy them every 3 days to SAN server in order to not loose a part of them.
+At the same time, this causes us some overlaps that we will discuss about it later.
 
 
-This extraction is done daily and data are stored under /1 folder in CSV format. 
-As an information, NXQL is used as SQL language to extract data from Nexthink Engine database. 
-
-Once done, we have 3 kind of files under /1 folder. 
-
-* anything related to a "connection" (TCP, UDP, etc..)
-Information collected about any outgoing (and only outgoing) network requests, such as which user is connected, by which application, IP address requested, HTTP protocol used, server port number, request execution time, request content size. 
-These information are mainly related to the source machine of request, which can be a simple user machine but also a server. 
-
-* anything related to a "webrequest" (DNS information)
-This kind of data is captured while a web request (HTTP) is detected. 
-Any information about the target machine is collected.
-Full URL of a web request is not registered but only its DNS information.
-
-* anything related to an "execution"
-These are information about the execution of any application started by a user.
-And this information is collected even if a user doesn't login to the application executed. 
-Because there are some applications which don't need to ask any connection/login. 
-In other terms, this give us information about :
-
-* which user executed an application ?
-* which application is executed ?
-* at which time ?
-* what is the version of the executed application ?
-* how much does it take to be started
-* what is the path to the application
-* etc.
+Data collection recovered from Nexthink environments are not in CSV format.
+We need to read and extract them into CSV format and we need to realise this in a Nexthink environment.
 
 
-
-As it is seen, there are 3 different kind of data collection which need to be kept seperately.
-This is why we create 3 folders ( _/connection_, /_webrequest_, /_execution_) under s3 server at any time we need to store them. 
-
-
-[TIP]
-give a picture from cyberdock with highlighted colors of these folders. 
+There are 2 virtual machines on the collector server which are dedicated to extract information from "BackupData" to CSV format.
+The first one is VM5 which is intended to extract data which is collected by first group of servers.
+The second one, VM6, is used to extract backup data collected by second group of servers.
 
 
-The next action after extracting backup data and storing them on /1 folder, is to anonymize them. 
-This process is also done on VM20. 
-Anonymized data is stored under /2 folder on the SAN server in CSV format. 
-Finally, it is also copied to s3://gedatalab/in. 
+Data provided by Nexthink are kept on /0/ folder on SAN server.
+They are dispatched either on VM5 or VM6 to be extracted in CSV format and then stored under /1/ folder on SAN server.
+We call this operation _extractbackup_ which is executed daily.
+
+NOTE: As an information, NXQL is used as SQL language to extract data from Nexthink Engine database.
+
+After extracting, we separate 3 data types under /1/ folder.
+
+* _connection_ - anything related to users' "connection" (TCP, UDP, etc..)
+
+Information collected about any outgoing (and only outgoing) network requests,
+such as which user is connected, by which application,
+IP address requested, HTTP protocol used, server port number,
+request execution time, request content size, etc.
+These information are mainly related to the source device of the requests.
+It can be a simple user machine but also a server.
+
+* _webrequest_ - anything related to a "webrequest" (DNS information)
+
+This kind of data are captured while a web request (HTTP) is detected.
+Some information about the target device is collected, such as request's DNS address (google, etc.), etc.
+However, full URL of web requests are not registered at all.
 
 
+* _execution_ - anything related to an application "execution"
+
+These are information about the execution of any application used by users.
+This concern also applications which do not access to internet.
+(even if a user doesn't login to the application).
+
+In general, these kind of data give us information about which application is executed,
+by which user, at what time, the version of the application,
+how much does it take to be started, the path to the application, etc.
 
 
-== Kind of information
-
-* *connection*: These are mainly requests done by the source devices.
-Any HTTP requests, either in TCP or UDP protocol, are collected and stored.
+As a result, there are 3 main folders ( _/connection_, /_webrequest_, /_execution_) under s3 server
+for each of these types of data collections.
 
 
-* *webrequest*: These are only information about the server DNS requested. (google, any web-site, etc.)
+//[TIP]give a picture from cyberdock with highlighted colors of these folders.
 
-* *execution*: These are information about the applications executed on the user's machine which do not probably use internet requests.
+== Anonymization
+
+The following process is to make anonymous some user information from extracted data.
+As usual, we use virtual machine VM20 for this purpose.
+Once done, we store them under /2/ folder on the SAN server in CSV format.
+
+
+Finally, these data is copied to _s3://gedatalab/in._
 
