--- a/doc/doc_introduction.adoc
+++ b/doc/doc_introduction.adoc
@@ -9,7 +9,6 @@
 // * for pipeline, represent how data is kept during different steps of the pipeline. 
 
 
-
 == Types of data sources to collect
 
 
@@ -18,16 +17,15 @@ These sources are :
 
 * Oracle logs
 * Nexthink
-* Server-sockets
-* Server-usage
+* Server sockets
+* Server usage
+
 
 image::images/source_collect0.jpg[title="Types of data sources to collect", width="800", height="230"]
 
 
-Oracle logs are database access log files.
-Nexthink is the application which collects data about network connections, program executions, web requests, etc. from PCs, Laptops or servers. 
-While Nexthink is mainly applied on Microsoft Windows systems, "Server-sockets" is implemented for Linux based machines.
-Finally, "server-usage" is data collection of servers' CPU usage, memory and storage usage.
-
-
+_Oracle logs_ are database access log files.
+_Nexthink_ is the application which collects data about network connections, program executions, web requests, etc. from PCs, laptops or servers.
+While Nexthink is mainly applied on Microsoft Windows systems, _Server sockets_ is implemented for Linux based machines.
+Finally, _Server usage_ is data collection from servers, including their CPU, memory, storage usages, etc.
 
