--- a/doc/doc_nexthink.adoc
+++ b/doc/doc_nexthink.adoc
@@ -2,6 +2,8 @@
 == Nexthink
 
 Nexthink is the application which collects information about any actions done on a PC, Laptop or a server.
+See image below.
+footnote:[https://doc.nexthink.com/images/a/a3/Collector.png]
 
 image::images/collector.png[title="Nexthink Engine which collects data from different devices", width="400", height="300"]
 
@@ -20,16 +22,17 @@ The version of Nexthink is v6 in these servers.
 Data collected from PCs, laptops, etc.. are stored on the first group of servers.
 Whatever is collected from servers is saved on the second group of servers.
 
+image::images/nexthink_collector_engins.jpg[title="Nexthink Engines which collect data to servers and backup them daily", width="300", height="350"]
 
 Collected data are provided and stored under SAN server at /0/ folder level.
 However, they need to be extracted and it must be done inside of a nexthink environment.
-We have 2 VMs (nexthink v5 and v6) on the collector server which are dedicated to extract data to CSV format. 
+We have 2 VMs (nexthink v5 and v6) on the collector server which are dedicated to extract data to CSV format.
 
 Once data are deployed correctly to these VMs and we use NXQL sql requests to extract information.
 Extracted data are then stored on /1/ folder level.
 
 
-Collected data is deployed to these VMs and then we extract information that we need in CSV format.
+Collected data are deployed on these VMs and then we extract information needed into CSV format.
 Language used to extract information from collected data is NXQL.
 And then we store them at level /1 folder.
 
@@ -37,14 +40,8 @@ And then we store them at level /1 folder.
 Finally, extracted data is anonymized via VM20 and stored on s3://collect/nexthink/in.
 Source code path: ALDatalab/collect/nexthink.
 
-image::images/extract_anonymize.jpg[title="Nexthink backup extraction and data anonymization", width="450", height="250"]
 
-
-image::images/nexthink_collector_engins.jpg[title="Nexthink Engines which collect and backup data", width="350", height="400"]
-
-
-
-== Data transfer from backup servers
+=== Data transfer from backup servers
 
 Collector server (SARMA10012) collects backup data from Nexthink Collector servers every 3 days.
 Each backup data can contain log history from 5 to 20 days.
@@ -61,15 +58,16 @@ We need to read and extract them into CSV format and we need to realise this in 
 
 
 There are 2 virtual machines on the collector server which are dedicated to extract information from "BackupData" to CSV format.
-The first one is VM5 which is intended to extract data which is collected by first group of servers.
-The second one, VM6, is used to extract backup data collected by second group of servers.
+The first one is VM5 which is intended to extract data collected on the first group of servers.
+The second one, VM6, is used to extract backup data coming from the second group of servers.
 
 
 Data provided by Nexthink are kept on /0/ folder on SAN server.
 They are dispatched either on VM5 or VM6 to be extracted in CSV format and then stored under /1/ folder on SAN server.
 We call this operation _extractbackup_ which is executed daily.
+See following image which describes these processes.
 
-NOTE: As an information, NXQL is used as SQL language to extract data from Nexthink Engine database.
+image::images/extract_anonymize.jpg[title="Nexthink backup extraction and data anonymization", width="450", height="250"]
 
 After extracting, we separate 3 data types under /1/ folder.
 
@@ -106,7 +104,7 @@ for each of these types of data collections.
 
 //[TIP]give a picture from cyberdock with highlighted colors of these folders.
 
-== Anonymization
+=== Anonymization
 
 The next step in the process is to make anonymous some user information from extracted data.
 As usual, we use virtual machine VM20 for this purpose.
