--- a/doc/doc_serverusage.adoc
+++ b/doc/doc_serverusage.adoc
@@ -8,10 +8,10 @@ An HTTP URL allows us to call and get these data for a single given server by sp
 As response, it is an XLS file returned which will be then converted to CSV format and stored on s3.
 
 
-To know more about URL and other confirugations, look into conf/conf.sh file.
+To know more about URL and other configurations, look into conf/conf.sh file.
 
 
-There is a server.lst_ CSV file which contains hostname of all servers for which we want to collect their usage information.
+There is a _server.lst_ CSV file which contains hostname of all servers for which we want to collect their usage information.
 Server-usage data are synchronized 2 times in a week.
 
 
